--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
