--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "copy-to-clipboard": "^3.3.1",
-    "ipfs-http-client-lite": "^0.3.0",
+    "ipfs-http-client": "^52.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
