--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@cosmjs/launchpad": "^0.26.0",
     "@cosmjs/proto-signing": "^0.26.0",
     "@cosmjs/stargate": "^0.26.0",
+    "@firmachain/firma-js": "^0.2.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
